--- a/style.css
+++ b/style.css
@@ -1,10 +1,7 @@
 * {
-  /* padding: 0;
+  padding: 1;
   margin: 0;
-  box-sizing: border-box; */
-  /* width: 8.5in;
-  height: 11in;
-  margin: 0; */
+  box-sizing: border-box;
 }
 
 html {
@@ -44,7 +41,6 @@ html {
 
 
 .container {
-  /* height: 100vh; */
   height: 11in;
   width: 8.5in;
   display: grid;
