--- a/style.css
+++ b/style.css
@@ -39,10 +39,28 @@ html {
   grid-area: left;
   grid-template-rows: 25% 25% 25% 25%;
   background-color: yellow;
+  padding: 2rem;
 }
 .right {
   grid-area: right;
   background-color: green;
+  padding: 2rem;
+}
+
+li {
+  list-style-type: none;
+}
+
+.section-name {
+  /* border-bottom: 1px solid; */
+}
+
+.section-name:after {
+  content: "";
+  display: block;
+  background: -webkit-linear-gradient(left, rgba(92, 7, 52, 1) 0%, rgba(134, 29, 84, 1) 12%, rgba(255, 93, 177, 1) 47%, rgba(83, 0, 30, 1) 100%);
+  height:2px;
+  width: 100%;
 }
 
 
