switched to description list

--- a/style.css
+++ b/style.css
@@ -44,8 +44,7 @@ html {
 .right {
   grid-area: right;
   background-color: green;
-  padding: 2rem;
-}
+  padding: 0 2rem 2rem 2rem;}
 
 li {
   list-style-type: none;
@@ -76,7 +75,7 @@ ul, dl {
   height: 11in;
   width: 8.5in;
   display: grid;
-  grid-template-columns: 44% 28% 28%;
+  grid-template-columns: 32% 34% 34%;
   grid-template-rows: 15% 85%;
   grid-template-areas:
    "header header header"
