--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ html {
 .header {
   display: grid;
   grid-area: header;
-  background-color: red;
+  /* background-color: red; */
   grid-template-columns: 45% 55%;
   padding: 2rem;
 }
@@ -37,14 +37,19 @@ html {
 .left {
   display: grid;
   grid-area: left;
-  grid-template-rows: 25% 25% 25% 25%;
-  background-color: yellow;
+  grid-template-rows: 25% 28% 47%;
+  /* background-color: yellow; */
   padding: 0 2rem 2rem 2rem;
 }
 .right {
   grid-area: right;
-  background-color: green;
-  padding: 0 2rem 2rem 2rem;}
+  /* background-color: green; */
+  padding: 0 2rem 2rem 2rem;
+}
+
+dl:nth-last-child(1) {
+  padding-bottom: 3rem;
+}
 
 li {
   list-style-type: none;
@@ -65,8 +70,9 @@ li {
 }
 
 ul, dl {
-  padding-top: .5rem;
-  font-size: 1.5rem;
+  padding-top: 1rem;
+  font-size: 1.8rem;
+  padding-bottom: 1rem;
 }
 
 
@@ -76,7 +82,7 @@ ul, dl {
   width: 8.5in;
   display: grid;
   grid-template-columns: 32% 34% 34%;
-  grid-template-rows: 15% 85%;
+  grid-template-rows: 13% 87%;
   grid-template-areas:
    "header header header"
    "left right right";
@@ -84,5 +90,5 @@ ul, dl {
 
 
 .test {
-  padding-bottom: 10px;
+  padding-bottom: 1rem;
 }
