changed font-color and line height for section names

--- a/style.css
+++ b/style.css
@@ -26,6 +26,7 @@ html {
 }
 
 .name {
+  color: #00A86b;
   font-size: 5rem;
 }
 
@@ -57,8 +58,10 @@ li {
 
 .section-name {
   /* border-bottom: 1px solid; */
+  color: #00A86b;
   font-size: 3rem;
-  line-height: 3.1rem;
+  line-height: 4rem;
+
 }
 
 .section-name:after {
